--- a/booking_system/templates/booking_system/edit_room.html
+++ b/booking_system/templates/booking_system/edit_room.html
@@ -15,7 +15,7 @@
     Room capacity:
     <input type="text" name="capacity" value="{{ room.capacity }}"><br>
     Projector availability:
-    <input type="checkbox" name="projector">Available
+    <input type="checkbox" name="projector" {% if room.projector %} checked {% endif %}>Available
     <br>
     <input type="submit" value="Modify room">
 </form>
