--- a/booking_system/templates/booking_system/new_room.html
+++ b/booking_system/templates/booking_system/new_room.html
@@ -13,7 +13,7 @@
     Room name:
     <input type="text" name="name"><br>
     Room capacity:
-    <input type="text" name="capacity"><br>
+    <input type="number" name="capacity"><br>
     Projector availability:
     <input type="checkbox" name="projector">Available
     <br>
