--- a/booking_system/templates/booking_system/all_rooms.html
+++ b/booking_system/templates/booking_system/all_rooms.html
@@ -8,32 +8,43 @@
     <title>All rooms</title>
 </head>
 <body>
-{% if not rooms %}
-    <h2>No available rooms</h2>
-    <a href="{% url 'new_room' %}">add room</a>
-{% endif %}
 <div>
     <ol>
         {% for room in rooms %}
             <lu>
-                <a href=""></a>{{ room.name }} -> capacity: {{ room.capacity }}<br>
-                Availability: yes/no <br>
-                Projector availability: {{ room.projector }} <br>
+                <a href="{% url 'room_info' room.id %}">{{ room.name }}</a> -> capacity: {{ room.capacity }}<br>
                 {% if room.reserved %}
                     Unavailable for today
                 {% else %}
                     Available for today
-                {% endif %}
-                <br>
+                {% endif %}<br>
+                Projector availability: {{ room.projector }} <br>
                 <a href="{% url 'edit_room' room.id %}">edit room</a>
                 <a href="{% url 'delete_room' room.id %}">delete room</a>
                 <a href="{% url 'room_reservation' room.id %}">reserve room</a>
                 <br>
-                <a href="{% url 'room_info' room.id %}">show more info</a>
-                <br>
             </lu><br>
+        {% empty %}
+            <h2>No available rooms</h2>
         {% endfor %}
     </ol>
+</div>
+<br>
+<div>
+    <h3>Search:</h3>
+    <form action="/search" method="get">
+        {% csrf_token %}
+        Room name:
+        <input type="text" name="name"><br>
+        Minimal room's capacity:
+        <input type="number" name="capacity"><br>
+        <input type="checkbox" name="projector">Projector availability <br>
+        <input type="submit" value="Search">
+    </form>
+</div>
+<br>
+<div>
+    <a href="{% url 'all_rooms' %}">SHOW ALL</a>
 </div>
 </body>
 </html>
